public/css/reboto.css
html,
body {
  background: #FAFBFC;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}
.error-page {
  width: 360px;
  padding: 154px 0 0;
  margin: auto;
}
.error {
  position: relative;
  z-index: 1;
  font-family: 'Roboto Black', sans-serif;
  font-size: 10rem;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
  color: #FFF;
}
.error .normal-text {
  font-size: 2rem;
  font-family: 'Roboto Black', sans-serif;
  color: #FFF;
}
.login-page {
  width: 360px;
  padding: 154px 0 0;
  margin: auto;
}
.login-error {
  color: #e74c3c;
  font-family: 'Roboto Black', sans-serif;
}
.form {
  position: relative;
  z-index: 1;
  background: #FFFFFF;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}
.form input {
  font-family: "Roboto", sans-serif;
  outline: 0;
  background: #f2f2f2;
  width: 100%;
  border: 0;
  margin: 0 0 15px;
  padding: 15px;
  box-sizing: border-box;
  font-size: 14px;
}
.form button {
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  outline: 0;
  background: #82BC31;
  width: 100%;
  border: 0;
  padding: 15px;
  color: #FFFFFF;
  font-size: 14px;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
}
.form button:hover,
.form button:active,
.form button:focus {
  background: #55bc00;
}
.form .help {
  margin: 15px 0 0;
  color: #b3b3b3;
  font-size: 16px;
}
.form .help a {
  color: #4CAF50;
  text-decoration: none;
}
.setup-page {
  width: 360px;
  padding: 154px 0 0;
  margin: auto;
}
.form .label {
  margin: 15px 0 0;
  color: #4CAF50;
  font-size: 20px;
  font-family: 'Roboto Black', sans-serif;
}
.overlay {
  height: 0;
  width: 100%;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  background-color: #000000;
  background-color: rgba(0, 0, 0, 0.9);
  overflow-x: hidden;
  transition: 0.5s;
}
.navigation-content {
  position: relative;
  top: 5%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}
.overlay a i .active {
  color: white;
}
.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 20px;
  color: #818181;
  display: block;
  transition: 0.3s;
}
.navigation-content a i {
  color: #818181;
}
.navigation-content a i:hover {
  color: #f1f1f1;
}
.overlay a:hover,
.overlay a:focus {
  color: #f1f1f1;
}
.overlay .close {
  position: absolute;
  top: 15px;
  right: 35px;
  font-size: 40px;
}
.navigation i {
  top: 50%;
  left: 50%;
  transform: translate(15%, 15%);
  margin-left: 1.5%;
}
#upper-nav {
  width: 100%;
  height: 76px;
  background: #733D9A;
  position: absolute;
}
#lower-nav {
  width: 100%;
  height: 65px;
  background: #8245AD;
  top: 76px;
  position: absolute;
}
#logo {
  position: relative;
  top: 10%;
  height: 80%;
  margin-left: 2%;
  float: left;
}
#profile {
  display: none;
}
#logo-title {
  position: relative;
  font-family: 'Roboto Black', sans-serif;
  color: #FFF;
  top: 0%;
  font-size: 1em;
  margin-left: 7%;
  font-weight: bold;
}
a {
  color: #FFF;
  text-decoration: none;
  font-size: 1em;
  font-family: 'Roboto Medium', sans-serif;
  margin-bottom: 1%;
  text-align: center;
}
.navigation-item-left {
  display: none;
}
div.navigation-item-left:hover {
  display: none;
}
.navigation-item-left i {
  display: none;
}
.navigation-item-right {
  display: none;
}
div.navigation-item-right:hover {
  display: none;
}
.navigation-item-right i {
  display: none;
}
.active {
  display: none;
}
.navigation-item-left a {
  display: none;
}
.navigation-item-right a {
  display: none;
}
@media screen and (min-width: 980px) {
  html,
  body {
    background: #FAFBFC;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
  }
  .navigation {
    display: none;
  }
  #upper-nav {
    display: inline-block;
    width: 100%;
    height: 76px;
    background: #733D9A;
    position: absolute;
  }
  #lower-nav {
    display: inline-block;
    width: 100%;
    height: 104px;
    background: #8245AD;
    top: 76px;
    position: absolute;
  }
  .login-page {
    width: 360px;
    padding: 154px 0 0;
    margin: auto;
  }
  #logo {
    position: relative;
    top: 10%;
    height: 80%;
    margin-left: 2%;
    float: left;
  }
  #logo-title {
    position: relative;
    font-family: 'Roboto Black', sans-serif;
    color: #FFF;
    top: 0%;
    font-size: 1em;
    margin-left: 7%;
    font-weight: bold;
  }
  a {
    display: inline-block;
    color: #FFF;
    text-decoration: none;
    font-size: 1em;
    font-family: 'Roboto Medium', sans-serif;
    margin-bottom: 1%;
    text-align: center;
  }
  .navigation-item-left a {
    height: 100%;
    width: 100%;
    display: block;
    text-decoration: none;
  }
  .navigation-item-right a {
    height: 100%;
    width: 100%;
    display: block;
    text-decoration: none;
  }
  .navigation-item-left {
    display: inline-block;
    margin-left: 1%;
    margin-top: 10px;
    text-align: center;
    float: left;
    background: #8245AD;
    height: 84px;
    width: 96px;
    border-radius: 5px;
  }
  div.navigation-item-left:hover {
    display: inline-block;
    background: #7424ad;
    height: 84px;
    width: 96px;
    border-radius: 5px;
  }
  .navigation-item-left i {
    display: inline-block;
    margin-top: 10%;
  }
  .navigation-item-right {
    display: inline-block;
    margin-right: 1%;
    margin-top: 10px;
    text-align: center;
    float: right;
    background: #8245AD;
    height: 84px;
    width: 96px;
    border-radius: 5px;
  }
  div.navigation-item-right:hover {
    display: inline-block;
    background: #7424ad;
    height: 84px;
    width: 96px;
    border-radius: 5px;
  }
  .navigation-item-right i {
    display: inline-block;
    margin-top: 10%;
  }
  .active {
    display: inline-block;
    background: #7c2fad;
    height: 84px;
    width: 96px;
    border-radius: 5px;
  }
  #profile {
    text-decoration: none;
    display: inline-block;
    float: right;
    position: relative;
    bottom: 65.5%;
    margin-left: 10px;
    margin-right: 40px;
    color: white;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
  }
  #profile:hover {
    color: lightgray;
  }
}

